website/versioned_docs/version-2.0.0-alpha.12/node-client.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.12-node-client.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: node-client.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./node-client.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./node-client.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delAuthenticationSession(namespace)](./node-client.globaljsoncontainerstorage.delauthenticationsession.md) |  |  |
|  [delIdentity(namespace)](./node-client.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delMFABearerToken(namespace)](./node-client.globaljsoncontainerstorage.delmfabearertoken.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./node-client.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delRefreshToken(namespace)](./node-client.globaljsoncontainerstorage.delrefreshtoken.md) |  |  |
|  [delSessionID(namespace)](./node-client.globaljsoncontainerstorage.delsessionid.md) |  |  |
|  [delUser(namespace)](./node-client.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./node-client.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getAuthenticationSession(namespace)](./node-client.globaljsoncontainerstorage.getauthenticationsession.md) |  |  |
|  [getExtraSessionInfoOptions(namespace)](./node-client.globaljsoncontainerstorage.getextrasessioninfooptions.md) |  |  |
|  [getIdentity(namespace)](./node-client.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getMFABearerToken(namespace)](./node-client.globaljsoncontainerstorage.getmfabearertoken.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./node-client.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getRefreshToken(namespace)](./node-client.globaljsoncontainerstorage.getrefreshtoken.md) |  |  |
|  [getSessionID(namespace)](./node-client.globaljsoncontainerstorage.getsessionid.md) |  |  |
|  [getUser(namespace)](./node-client.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./node-client.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setAuthenticationSession(namespace, authenticationSession)](./node-client.globaljsoncontainerstorage.setauthenticationsession.md) |  |  |
|  [setExtraSessionInfoOptions(namespace, options)](./node-client.globaljsoncontainerstorage.setextrasessioninfooptions.md) |  |  |
|  [setIdentity(namespace, identity)](./node-client.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setMFABearerToken(namespace, mfaBearerToken)](./node-client.globaljsoncontainerstorage.setmfabearertoken.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./node-client.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setRefreshToken(namespace, refreshToken)](./node-client.globaljsoncontainerstorage.setrefreshtoken.md) |  |  |
|  [setSessionID(namespace, sessionID)](./node-client.globaljsoncontainerstorage.setsessionid.md) |  |  |
|  [setUser(namespace, user)](./node-client.globaljsoncontainerstorage.setuser.md) |  |  |

